[package]
name = "port_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "rustls-tls"], default-features = false }
csv = "1.3.0"
regex = "1.10.4"
once_cell = "1.19.0"
anyhow = "1.0.82"
# For macOS, lsof is usually available. For other OS, different commands/libraries might be needed.
# This example will focus on macOS as per user's system info.
