[package]
name = "portpick"
version = "1.6.9"
edition = "2025"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking", "rustls-tls"], default-features = false }
regex = "1.10.4"
once_cell = "1.19.0"
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
colored = "3.0.0"
rand = "0.9.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
# For macOS, lsof is usually available. For other OS, different commands/libraries might be needed.
# This example will focus on macOS as per user's system info.

[features]
default = []
# ci_skip_lsof_tests = [] # This line is removed or the feature is removed if it's the only one
